src/objects/pse__Filter_Set__c.object
<CustomObject>
    <description>Represents a collection of filters that determines which resources or projects display in the Resource or Project Planners.</description>
    <fields>
        <fullName>pse__Feature__c</fullName>
        <inlineHelpText>Restricts where this filter set will be shown as an option. Currently only &quot;Resource Planner&quot; and &quot;Project Planner&quot; are supported.</inlineHelpText>
        <label>Available In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resource Planner</fullName>
                </value>
                <value>
                    <fullName>Project Planner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Filter_Set_Name__c</fullName>
        <description>The name of the Filter Set.</description>
        <inlineHelpText>The name of the Filter Set.</inlineHelpText>
        <label>Filter Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Filters__c</fullName>
        <description>Holds the filter attributes and values in a saved filter set. Stored as a JSON object.</description>
        <inlineHelpText>Holds the filter attributes and values in a saved filter set. Stored as a JSON object.</inlineHelpText>
        <label>Filters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates the filter set is the default.</description>
        <inlineHelpText>When checked, indicates the filter set is the default.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true only the owner will be able to view and use this filter. Otherwise any user who has sharing access may make use of it.</inlineHelpText>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Related_SObject_ID__c</fullName>
        <description>The ID of a related SObject, such as a project ID.</description>
        <inlineHelpText>Filter sets that can be associated with other objects, such as projects.</inlineHelpText>
        <label>Related SObject</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__SObject__c</fullName>
        <inlineHelpText>The API name of the SObject this set of filters operates on.</inlineHelpText>
        <label>SObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Filter Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>